change the code and update